--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,8 @@ google-cloud-texttospeech
 pymysql
 python-dateutil
 ply
-aioodbc # might require: sudo apt-get install unixodbc-dev python3.8-dev
-opencv-python
-Pillow
+#aioodbc # might require: sudo apt-get install unixodbc-dev python3.8-dev
+#opencv-python
+#Pillow
 pytz
 aiohttp
